--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-location": "^15.1.1",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-datepicker": "^1.7.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.7.1",
     "react-native-paper": "^5.7.2",
@@ -29,8 +33,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "13.4.0",
-    "react-native-toast-message": "^2.1.6",
-    "expo-secure-store": "~12.1.1"
+    "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
